packages/isar/test/errors/class/private.dart
// must be public

import 'package:isar/isar.dart';

// ignore_for_file: avoid_classes_with_only_static_members
// Test case for private class validation
@collection
// ignore: unused_element
class _Model {
  late int id;
}
